--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,3 @@
 FROM debian
 RUN apt-get update && apt-get install -y nmap
-CMD ncat -l 2000 -k -c 'xargs -n1 echo'
+CMD ncat -l 2000 -k --exec /bin/cat
